# Doc-Generator

./: README.md  __init__.py  __main__.py  config.py  main.py  pyproject.toml
analyzers/: __init__.py  project_analyzer.py
discovery/: __init__.py  model_finder.py
doc_generator_ai/: __init__.py  cli.py  config.py
doc_generator_ai/analyzers/: __init__.py  system_analyzer.py
doc_generator_ai/discovery/: __init__.py  project_structure.py
doc_generator_ai/generators/: __init__.py  ai_client.py  design_generator.py
doc_generator_ai/outputs/: __init__.py  exporter.py
generators/: __init__.py  ai_client.py  dfd_generator.py  doc_generator.py  er_generator.py  flowchart_generator.py
outputs/: __init__.py  exporters.py
tests/: test_general_generator.py
